--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </div>
 
             <div class="footer__copyright">
-                <p>© WebCademy.ru. Макет создан для инвесторов в мою юрисдикцию</p>
+                <p>Twitter : @ZiBohdan</p>
             </div>
 
         </div>
